--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 
-<!-- replace ## with your county -->
+<!-- # -->
 
 <html>
   <head>
-    <title>QGIS ## User Group</title>
+    <title>QGIS Georgia User Group</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:900,100' rel='stylesheet' type='text/css'>
