--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <html>
   <head>
-    <title>QGIS Georgia User Group</title>
+    <title>QGIS საქართველოს მომხმარებელთა ჯგუფი</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:900,100' rel='stylesheet' type='text/css'>
@@ -43,25 +43,25 @@
         <div class="collapse navbar-collapse" id="nav-collapse">
           <ul class="nav navbar-nav">
             <li><a href="http://qgis.org/##/site/about/index.html">Discover QGIS</a></li>
-            <li><a href="http://qgis.org/##/site/forusers/index.html">For Users</a></li>
+            <li><a href="http://qgis.org/##/site/forusers/index.html">მომხმარებლებისთვის</a></li>
             <li><a href="http://qgis.org/##/site/getinvolved/index.html">Get Involved</a></li>
-            <li><a href="http://qgis.org/##/docs/index.html">Documentation</a></li>
+            <li><a href="http://qgis.org/##/docs/index.html">დოკუმენტაცია</a></li>
             <li class="navbar-dropdown">
               <div class="select-dropdown">
               <select id="other_groups">
-                <option value="" title="none">Other User Groups</option>
+                <option value="" title="none">სხვა მომხმარებელთა ჯგუფები</option>
                 <optgroup label="America">
-                  <option title="USA" value="http://qgis.us/">U.S.A.</option>
+                  <option title="USA" value="http://qgis.us/">აშშ</option>
                 </optgroup>
                 <optgroup label="Europe">
-          <option title="Holland" value="http://www.qgis.nl/">Holland</option>
-		  <option title="IE" value="https://ieqgis.wordpress.com/category/qgis/">Ireland</option>
-		  <option title="Italy" value="http://www.qgis.it/">Italy</option>
-		  <option title="Portugal" value="http://qgis.pt/">Portugal</option>
-		  <option title="Switzerland" value="http://qgis.ch">Switzerland</option>
-		  <option title="UK" value="http://qgis.uk/">UK</option>
+          <option title="Holland" value="http://www.qgis.nl/">ნიდერლანდები</option>
+		  <option title="IE" value="https://ieqgis.wordpress.com/category/qgis/">ირლანდია</option>
+		  <option title="Italy" value="http://www.qgis.it/">იტალია</option>
+		  <option title="Portugal" value="http://qgis.pt/">პორტუგალია</option>
+		  <option title="Switzerland" value="http://qgis.ch">შვეიცარია</option>
+		  <option title="UK" value="http://qgis.uk/">გაერთიანებული სამეფო</option>
 		<optgroup label="Oceania">
-		  <option title="ANZ" value="https://sites.google.com/site/ausqgis/home">Australia &amp; NZ</option>
+		  <option title="ANZ" value="https://sites.google.com/site/ausqgis/home">ავსტრალია &amp; NZ</option>
                 </optgroup>
               </select>
               </div>
@@ -75,19 +75,19 @@
     <div class="container">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 page-title">QGIS ## User Group</div>
+          <div class="col-xs-12 page-title">QGIS საქართველოს მომხმარებელთა ჯგუფი</div>
         </div>
         <div class="row">
           <div class="col-sm-12 col-md-6 col-md-offset-3">
             <ul class="page-nav">
               <li>
-                <a href="#about">About</a>
+                <a href="#about">შესახებ</a>
               </li>
               <li>
-                <a href="#meetings">Meetings</a>
+                <a href="#meetings">შეხვედრები</a>
               </li>
               <li>
-                <a href="#contact">Contact</a>
+                <a href="#contact">საკონტაქტო</a>
               </li>
               <li>
                 <a href="http://qgis.org" target="_blank">QGIS.org</a>
